--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ svg{
     padding-top: 0.5rem;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 10;
 }
 .header__logo{
     width: 80px;
@@ -509,7 +509,7 @@ svg{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 55;
     visibility: hidden;
     opacity: 0;
     padding: 1rem;
@@ -608,17 +608,16 @@ svg{
 .message{
     width: 100%;
     height: 120px;
-    z-index: 999;
     position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    /*background-color: green;*/
     text-align: center;
     visibility: hidden;
     opacity: 0;
-    z-index: 2000;
+    z-index: 999;
 }
 .message--show{
     visibility: visible;
@@ -631,7 +630,7 @@ svg{
     background-color: rgba(0, 0, 0, 0.94);
     position: fixed;
     top: 0;
-    z-index: 1999;
+    z-index: 55;
     visibility: hidden;
     opacity: 0;
     overflow-y: auto;
@@ -722,4 +721,11 @@ svg{
     border: none;
     cursor: pointer;
 }
-
+.shoppingcart__adv{
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 0.8rem;
+}
+.shoppingcart__adv--show{
+    color: white;
+}
